--- a/copy.html
+++ b/copy.html
@@ -10,10 +10,38 @@
         <title>test</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="">
     </head>
     <body>
-        {{info}}
-        <script src="" async defer></script>
+        
+        <table class="table">
+            <caption>List of users</caption>
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Email</th>
+                <th scope="col">Password</th>
+                <th scope="col">Coffee Liker</th>
+                <th scope="col">Is Adult</th>
+              </tr>
+            </thead>
+            <tbody>
+            {% for i in info %}
+              <tr>
+                <th scope="row">{{i + 1}}</th>
+                <td>{{info[i][0]}}</td>
+                <td>{{info[i][1]}}</td>
+                <td>{{info[i][2]}}</td>
+                <td>{{info[i][3]}}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+
+        
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
